# scbe

./: .gitignore  CMakeLists.txt  README.md
include/: cast.hpp  context.hpp  data_layout.hpp  hash.hpp  pass.hpp  pass_manager.hpp  pch.hpp  printer_util.hpp  type.hpp  type_alias.hpp  unit.hpp
include/IR/: block.hpp  builder.hpp  call_analysis.hpp  cfg_semplification.hpp  compute_dominators.hpp  constant_folder.hpp  dce.hpp  dominator_tree.hpp  folder.hpp  function.hpp  function_inlining.hpp  global_value.hpp  heuristics.hpp  instruction.hpp  loop_analysis.hpp  mem2reg.hpp  native.hpp  printer.hpp  value.hpp
include/MIR/: block.hpp  constant_pool.hpp  function.hpp  instruction.hpp  operand.hpp  printer.hpp  register_info.hpp  stack_frame.hpp  stack_slot.hpp
include/codegen/: coff_object_emitter.hpp  compute_dominators.hpp  constant_folder.hpp  dag_isel_pass.hpp  dce.hpp  elf_object_emitter.hpp  fixup.hpp  graph_color_regalloc.hpp  instruction_encoder.hpp  mem2reg.hpp  object_emitter.hpp  regalloc_base.hpp  spiller.hpp
src/: context.cpp  pass_manager.cpp  unit.cpp
src/IR/: block.cpp  builder.cpp  call_analysis.cpp  cfg_simplification.cpp  compute_dominators.cpp  constant_folder.cpp  dce.cpp  dominator_tree.cpp  folder.cpp  function.cpp  function_inlining.cpp  global_value.cpp  heuristics.cpp  instruction.cpp  loop_analysis.cpp  mem2reg.cpp  native.cpp  printer.cpp  value.cpp
src/MIR/: block.cpp  constant_pool.cpp  function.cpp  instruction.cpp  printer.cpp  register_info.cpp  stack_frame.cpp
src/codegen/: coff_object_emitter.cpp  dce.cpp  (+9 more)
tests/: test.cpp
(+23 files in other folders)
